@@ -23,16 +23,9 @@ if (!defined('IS_VALID_PHPMYFAQ')) {
     exit();
 }
 
-require PMF_INCLUDE_DIR . '/Export.php';
-?>
-        <header>
-            <h2><?php print($PMF_LANG["ad_menu_export"]); ?></h2>
-        </header>
+printf('<header><h2>%s</h2></header>', $PMF_LANG['ad_menu_export']);
 
-        <form class="form-horizontal" action="?action=exportfile" method="post">
-<?php
-
-if (!PMF_Db::checkOnEmptyTable('faqdata')) {
+if ($permission['export'] && !PMF_Db::checkOnEmptyTable('faqdata')) {
 
     if (!PMF_Db::checkOnEmptyTable('faqcategories')) {
         $category = new PMF_Category($faqConfig);
@@ -43,14 +36,15 @@ if (!PMF_Db::checkOnEmptyTable('faqdata')) {
         $categoryHelper = new PMF_Helper_Category();
         $categoryHelper->setCategory($category);
 ?>
+        <form class="form-horizontal" action="?action=exportfile" method="post">
             <fieldset>
-                <legend><?php print($PMF_LANG['ad_export_which_cat']); ?></legend>
+                <legend><?php echo $PMF_LANG['ad_export_which_cat'] ?></legend>
                 <div class="control-group">
-                    <label class="control-label" for="catid"><?php print($PMF_LANG["ad_entry_category"]); ?></label>
+                    <label class="control-label" for="catid"><?php echo $PMF_LANG["ad_entry_category"]; ?></label>
                     <div class="controls">
                         <select name="catid" id="catid" size="1">
-                            <option value="0"><?php print $PMF_LANG['msgShowAllCategories'] ?></option>
-                            <?php print $categoryHelper->renderOptions(); ?>
+                            <option value="0"><?php echo $PMF_LANG['msgShowAllCategories'] ?></option>
+                            <?php echo $categoryHelper->renderOptions(); ?>
                         </select>
                     </div>
                 </div>
@@ -59,7 +53,7 @@ if (!PMF_Db::checkOnEmptyTable('faqdata')) {
                     <div class="controls">
                         <label class="checkbox" for="downwards">
                             <input type="checkbox" name="downwards" id="downwards" value="1" checked="checked" />
-                            <?php print($PMF_LANG['ad_export_cat_downwards']); ?>
+                            <?php echo $PMF_LANG['ad_export_cat_downwards'] ?>
                         </label>
                     </div>
                 </div>
@@ -69,45 +63,49 @@ if (!PMF_Db::checkOnEmptyTable('faqdata')) {
     }
 ?>
             <fieldset>
-                <legend><?php print($PMF_LANG['ad_export_type']); ?></legend>
+                <legend><?php echo $PMF_LANG['ad_export_type'] ?></legend>
                 <div class="control-group">
                     <div class="controls">
-                        <label><?php print($PMF_LANG['ad_export_type_choose']); ?></label>
+                        <label><?php echo $PMF_LANG['ad_export_type_choose'] ?></label>
                         <label class="radio">
                             <input type="radio" name="type" value="pdf" checked="checked" />
-                            <?php print($PMF_LANG["ad_export_generate_pdf"]); ?>
+                            <?php echo $PMF_LANG["ad_export_generate_pdf"] ?>
                         </label>
                         <label class="radio">
                             <input type="radio" name="type" value="xml" />
-                            <?php print($PMF_LANG["ad_xml_gen"]); ?>
+                            <?php echo $PMF_LANG["ad_xml_gen"] ?>
                         </label>
                         <label class="radio">
                             <input type="radio" name="type" value="xhtml" />
-                            <?php print($PMF_LANG['ad_export_gen_xhtml']); ?>
+                            <?php echo $PMF_LANG['ad_export_gen_xhtml'] ?>
                         </label>
                     </div>
                 </div>
                 <div class="control-group">
                     <div class="controls">
-                        <label><?php print($PMF_LANG['ad_export_download_view']); ?></label>
+                        <label><?php echo $PMF_LANG['ad_export_download_view'] ?></label>
                         <label class="radio">
-                            <input type="radio" name="dispos" value="<?php print PMF_HttpStreamer::EXPORT_DISPOSITION_ATTACHMENT; ?>" checked="checked" />
-                            <?php print($PMF_LANG['ad_export_download']); ?>
+                            <input type="radio" name="dispos" value="<?php echo PMF_HttpStreamer::EXPORT_DISPOSITION_ATTACHMENT; ?>" checked="checked" />
+                            <?php echo $PMF_LANG['ad_export_download'] ?>
                         </label>
                         <label class="radio">
-                            <input type="radio" name="dispos" value="<?php print PMF_HttpStreamer::EXPORT_DISPOSITION_INLINE; ?>">
-                            <?php print($PMF_LANG['ad_export_view']); ?>
+                            <input type="radio" name="dispos" value="<?php echo PMF_HttpStreamer::EXPORT_DISPOSITION_INLINE; ?>">
+                            <?php echo $PMF_LANG['ad_export_view'] ?>
                         </label>
                     </div>
                 </div>
             </fieldset>
 
             <div class="form-actions">
-                <input class="btn-primary" type="submit" name="submitExport" value="<?php print(strip_tags($PMF_LANG["ad_menu_export"])); ?>" />
-                <input class="btn-info" type="reset" name="resetExport" value="<?php print(strip_tags($PMF_LANG["ad_config_reset"])); ?>" />
+                <button class="btn btn-primary" type="submit" name="submitExport">
+                    <?php echo $PMF_LANG['ad_menu_export']; ?>
+                </button>
+                <button class="btn btn-info" type="reset" name="resetExport">
+                    <?php echo $PMF_LANG['ad_config_reset']; ?>
+                </button>
             </div>
         </form>
 <?php
 } else {
-    print($PMF_LANG["err_noArticles"]);
+    echo $PMF_LANG['err_noArticles'];
 }
